kube/services/netpolicy/user/notebook_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-notebook
  # Note - deploy to the usercode namespace
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            role: "gen3"
        podSelector:
          matchLabels:
            app: "jupyter-hub"
      - namespaceSelector:
          matchLabels:
            role: "gen3"
        podSelector:
          matchLabels:
            app: "ambassador"
  policyTypes:
   - Ingress
