kube/services/netpolicy/user/usercode_netpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-usercode
  # Note - deploy to the usercode namespace
spec:
  podSelector: {}
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            role: "gen3"
        podSelector:
          matchLabels:
            userhelper: "yes"
  policyTypes:
   - Egress
